# Snake_Effect_CMake

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
