cmake_minimum_required(VERSION 3.0)
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_C_COMPILER avr-gcc CACHE STRING "C compiler" FORCE)
set(CMAKE_OBJCOPY avr-objcopy CACHE STRING "avr-objcopy" FORCE)
set(CMAKE_SIZE avr-size CACHE STRING "avr-size" FORCE)
set(CMAKE_C_FLAGS "-Wall -mmcu=atmega32 -Os -DF_CPU=1000000UL")
set(OUT snake_effect)
set(DIRS inc/ lib/)
project(MY_PROJ)
add_subdirectory(lib/)
add_executable(${OUT} src/main.c)
set_target_properties(${OUT} PROPERTIES SUFFIX ".elf")
add_custom_command(TARGET ${OUT} POST_BUILD COMMAND ${CMAKE_OBJCOPY} ARGS -O ihex ${OUT}.elf ${OUT}.hex)
add_custom_command(TARGET ${OUT} POST_BUILD COMMAND ${CMAKE_SIZE} ${OUT}.hex > binaryReport.txt)
target_include_directories(${OUT} PUBLIC ${DIRS})
target_link_libraries(${OUT} PUBLIC MDIO)